# Music-BeagleYAI

./: .gitignore  LICENSE  README.md
hardware/: CMakeLists.txt
hardware/app/: CMakeLists.txt
hardware/app/include/: amplitude_visualizer.h  beatboxGenerator.h  buttonsFunctionalities.h  joystickFunctionalities.h  lcd_draw.h  micHandler.h  r5_shared_data.h  rotaryEncoderFunctionalities.h  shutdown.h  song_metadata.h  tcp_server.h  terminal_output.h  udp_server.h
hardware/app/src/: amplitude_visualizer.c  audio_player.c  beatboxGenerator.c  buttonsFunctionalities.c  client  joystickFunctionalities.c  lcd_draw.c  main.c  micHandler.c  rotaryEncoderFunctionalities.c  shutdown.c  song_metadata.c  tcp_server.c  terminal_output.c  udp_server.c
hardware/hal/: CMakeLists.txt
hardware/hal/include/hal/: accelerometer.h  audioMixer.h  buttons.h  gpio.h  i2c.h  joystick.h  micHandler.h  periodTimer.h  rotary_encoder.h  timeFunction.h  wavePlayback.h
hardware/hal/src/: accelerometer.c  audioMixer.c  buttons.c  gpio.c  i2c.c  joystick.c  micHandler.c  periodTimer.c  rotary_encoder.c  timeFunction.c  wavePlayback.c
hardware/r5/: CMakeLists.txt  load_r5_mcu.sh
hardware/r5/src/: main.c  r5_shared_data.h
server/: TCP_server.py  audd_api.py  song_recognition.py
test_python_client/: TCP_test_client.py
